Atualizado para nova conta GitHub

--- a/README
+++ b/README
@@ -13,6 +13,13 @@ Instalação
 Apenas download. Requer Python qualquer versão. Exemplo de uso:
 $ python NewtonPy.py
 
+ou 
+
+$ python NewtonPy <numero>
+
+Migrado para nova conta GitHub em 05.04.2013
+
+
 ----------------------------
 Marco Antonio Silveira de Souza
 http://oqueeufizhoje.blogspot.com
